Edit and save Content!

--- a/assets/scss/bolt.scss
+++ b/assets/scss/bolt.scss
@@ -96,6 +96,11 @@ aside {
     padding: 11px 16px;
 }
 
+.ui.form input[readonly] {
+    background-color: #EEE;
+    color: #999;
+}
+
 td.listing-thumb img {
     // Get rid of extra space because of the baseline
     display: block;
