--- a/templates/bolt/base.html.twig
+++ b/templates/bolt/base.html.twig
@@ -29,7 +29,7 @@
 
         {{ include('default/_flash_messages.html.twig') }}
 
-        {% block body %}
+        {% block main %}
         {% endblock %}
 
     </div>
