--- a/templates/bolt/content/listing.twig
+++ b/templates/bolt/content/listing.twig
@@ -10,7 +10,7 @@
 
 {% block body_id 'user_edit' %}
 
-{% block body %}
+{% block main %}
 
     {% include 'bolt/_partials/_content_listing.twig' with {'records': records } %}
 
