--- a/templates/bolt/users/change_password.twig
+++ b/templates/bolt/users/change_password.twig
@@ -4,7 +4,7 @@
 
 {% block body_id 'user_password' %}
 
-{% block body %}
+{% block main %}
 
     {% form_theme form 'form/semantic-ui-theme.twig' %}
 
