--- a/templates/bolt/users/edit.twig
+++ b/templates/bolt/users/edit.twig
@@ -6,7 +6,7 @@
 
 {% block body_id 'user_edit' %}
 
-{% block body %}
+{% block main %}
 
     {% form_theme form 'form/semantic-ui-theme.twig' %}
     {{ form_start(form) }}
