--- a/templates/bolt/editcontent/fields/text.twig
+++ b/templates/bolt/editcontent/fields/text.twig
@@ -1,5 +1,6 @@
-<div class="field">
-    <label>{{ field.definition.label|default(field.name) }}</label>
-    <input name="field[{{ field.name }}]" placeholder="First Name" type="text" value="{{ field }}"
-           {% if field.definition.class %}class="{{ field.definition.class }}"{% endif %}>
-</div>
+{% extends 'bolt/editcontent/fields/_base.twig' %}
+
+{% block field %}
+    <label>{{ label }}</label>
+    <input name="{{ name }}" placeholder="…" type="text" value="{{ value }}" class="{{ class }}" {{ attributes|default()|raw }}>
+{% endblock %}
