--- a/templates/users/edit.twig
+++ b/templates/users/edit.twig
@@ -1,4 +1,4 @@
-{% extends 'bolt/base.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block title %}
  {{ 'title.edit_user'|trans }} » <strong>{{ user.fullName|default('Unknown') }}</strong>
