--- a/templates/users/change_password.twig
+++ b/templates/users/change_password.twig
@@ -1,4 +1,4 @@
-{% extends 'bolt/base.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block title "Change Password » <strong>Pompidom</strong>" %}
 
