--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<div class="wrapper">
+<div class="wrapper has-{{ block('container') }}">
 
     <header data-vue-routing="{{ vueRouting|default() }}">
         <Topbar title="{{ block('title') }}"></Topbar>
