Working on File finder and editor

--- a/templates/finder/editfile.twig
+++ b/templates/finder/editfile.twig
@@ -8,7 +8,7 @@
 
 {% block main %}
 
-    <h2>Path: {{ area }}/{{ file }}</h2>
+    <h2>Path: {{ area }}{{ file }}</h2>
 
     <form method="post">
         <input type="hidden" name="file" value="{{ file }}">
