--- a/templates/finder/finder.twig
+++ b/templates/finder/finder.twig
@@ -6,114 +6,14 @@
 
 {% block main %}
 
-    <h2>Path: {{ area }}{% if path %}{{ path }}/{% endif %}</h2>
+    <h2>Path: {{ area }}{{ path }}</h2>
 
-{% if allfiles %}
+    {% include 'finder/_quickselect.twig' %}
 
-<div class="ui fluid search selection dropdown fileselector">
-    <input name="country" type="hidden">
-    <i class="dropdown icon"></i>
-    <div class="default text">Select Country</div>
-    <div class="menu">
-        {% for file, line in allfiles %}
-            <div class="item" data-value="{{ file }}"><i class="ar flag"></i><b>{{ file }}: </b>{{ line }}</div>
-        {% endfor %}
-    </div>
-</div>
+    {% include 'finder/_folders.twig' %}
 
-    <div class="ui form">
-        <div class="inline fields">
-            <label>Quick select:</label>
-            <div class="field">
-                <select class="ui search dropdown fileselector">
-                    {% for file, line in allfiles %}
-                        <option value="{{ file }}"><i class="dz flag"></i><b>{{ file }}: </b>{{ line }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            <div class="field">
-                <button class="ui button primary">Go</button>
-            </div>
-        </div>
-    </div>
-{% endif %}
+    {% include 'finder/_files.twig' %}
 
-    <table class="ui celled table">
-    <thead>
-        <tr>
-            <th></th>
-            <th>Directoryname</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-
-    {% if path %}
-    <tr>
-        <td><i class="fas fa-folder-open"></i></td>
-        <td>
-            <b>
-                <a href="{{ path('bolt_finder', {'area': area, 'path': parent }) }}">
-                    ../
-                </a>
-            </b>
-        </td>
-        <td>
-        </td>
-    </tr>
-    {% endif %}
-
-    {% for directory in finder.directories() %}
-<tr>
-    <td><i class="fas fa-folder"></i></td>
-    <td>
-        <b>
-            {% set dirname = path ~ directory.getRelativePathname() %}
-            <a href="{{ path('bolt_finder', {'area': area, 'path': dirname }) }}">
-                {{ directory.getRelativePathname }}/
-            </a>
-        </b>
-    </td>
-    <td>
-    </td>
-</tr>
-        {% endfor %}
-</table>
-
-
-<table class="ui celled table">
-    <thead>
-    <tr>
-        <th></th>
-        <th>Filename</th>
-        <th>Size</th>
-        <th>Date</th>
-        <th>Actions</th>
-    </tr>
-    </thead>
-
-    {% for file in finder.files() %}
-        <tr>
-            <td><i class="fas fa-file"></i></td>
-            <td>
-                <b>
-                    {% set filename = path ~ file.getRelativePathname() %}
-                    <a href="{{ path('bolt_edit_file', {'area': area, 'file': filename }) }}">
-                        {{ file.getRelativePathname }}
-                    </a>
-                </b>
-            </td>
-            <td>
-                {{ file.getSize() }} bytes
-            </td>
-            <td>
-                {{ file.getCTime()|localizeddate('short', 'short', null, 'UTC') }}
-            </td>
-            <td>
-                &nbsp;
-            </td>
-        </tr>
-    {% endfor %}
-</table>
 
 {% endblock %}
 
