--- a/templates/_base/layout.twig
+++ b/templates/_base/layout.twig
@@ -27,7 +27,7 @@
 
     <div id="{% block container %}content{% endblock %}">
 
-        {{ include('default/_flash_messages.html.twig') }}
+        {{ include('_partials/_flash_messages.html.twig') }}
 
         {% block main %}
         {% endblock %}
