--- a/templates/editcontent/edit.twig
+++ b/templates/editcontent/edit.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends '_base/layout.twig' %}
 
 {% block title %}
     Edit » <strong>{{ record.title|default('New') }}</strong>
