--- a/templates/bundles/TwigBundle/Exception/error.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error.html.twig
@@ -8,7 +8,7 @@
     See https://symfony.com/doc/current/cookbook/controller/error_pages.html
 #}
 
-{% extends 'base.html.twig' %}
+{% extends '_base/layout.twig' %}
 
 {% block body_id 'error' %}
 
