--- a/templates/finder/_files.twig
+++ b/templates/finder/_files.twig
@@ -14,8 +14,9 @@
     {% set imageformats = ['gif', 'jpg', 'jpeg', 'png', 'svg'] %}
 
     {% for file in finder.files() %}
-        {% set filename = path ~ file.getRelativePathname() %}
+
         {% set extension = file.extension() %}
+        {% set filename = path ~ file.getRelativePathname() %}
         {% set icon = 'fa-file' %}
         {% set link = path('bolt_edit_file', {'area': area, 'file': filename }) %}
         {% set thumbnail = '' %}
@@ -23,13 +24,14 @@
         {% set dimensions = '' %}
 
         {% if extension in imageformats %}
-            {% set link = filename|thumbnail(1000, 1000) %}
             {% set thumbnail = filename|thumbnail(100, 72) %}
             {% set icon = 'fa-image' %}
+            {% set link = path('bolt_media_edit', {'id': 0, 'area': area, 'file': filename}) %}
 
             {% for image in media if image.filename in filename %}
                 {% set title = image.title %}
                 {% set dimensions = image.width ~ ' × ' ~ image.height ~ 'px' %}
+                {% set link = path('bolt_media_edit', {'id': image.id}) %}
             {% endfor %}
 
         {% endif %}
