--- a/templates/editcontent/fields/slug.twig
+++ b/templates/editcontent/fields/slug.twig
@@ -10,9 +10,9 @@
             <div class="text"><i class="fas fa-unlock"></i> Locked</div>
             <i class="dropdown icon"></i>
             <div class="menu">
-                <div class="item"><i class="fas fa-unlock"></i> Locked</div>
-                <div class="item"><i class="fas fa-link"></i> Generate from: {{ field.slugUseFields|join(', ') }}</div>
-                <div class="item"><i class="fas fa-edit"></i> Edit</div>
+                <div class="item"><i class="fas fa-unlock fa-fw"></i> Locked</div>
+                <div class="item"><i class="fas fa-link fa-fw"></i> Generate from: {{ field.slugUseFields|join(', ') }}</div>
+                <div class="item"><i class="fas fa-pencil-alt fa-fw"></i> Edit</div>
             </div>
         </div>
     </div>
