--- a/templates/_partials/_content_listing.twig
+++ b/templates/_partials/_content_listing.twig
@@ -6,7 +6,7 @@
             <th>Title / Excerpt</th>
             <th style="min-width: 9.5em;">Meta</th>
             <th>Image</th>
-            <th>Actions</th>
+            <th style="min-width: 9.5em;">Actions</th>
         </tr>
         </thead>
         <tbody>
