--- a/templates/_partials/_content_record_default.twig
+++ b/templates/_partials/_content_record_default.twig
@@ -28,6 +28,20 @@
         <img src="{{ record.image|thumbnail(100, 75) }}" width="100" height="72">
     </td>
     <td class="listing-actions">
-        <a href="{{ path('bolt_edit_record', {'id': record.id}) }}" class="ui button">Edit</a>
+
+    <div class="ui buttons small">
+        <div class="ui button small"><i class="fas fa-edit"></i> Edit</div>
+            <div class="ui floating pointing dropdown icon button small">
+                <i class="dropdown icon"></i>
+                <div class="menu">
+                <div class="item"><i class="fas fa-unlock"></i> Edit Post</div>
+                <div class="item"><i class="fas fa-link"></i> Remove Post</div>
+                <div class="item"><i class="fas fa-edit"></i> Hide Post</div>
+            </div>
+        </div>
+    </div>
+
+
     </td>
+
 </tr>
