--- a/templates/_partials/_content_record_default.twig
+++ b/templates/_partials/_content_record_default.twig
@@ -29,17 +29,20 @@
     </td>
     <td class="listing-actions">
 
-    <div class="ui buttons small">
-        <div class="ui button small"><i class="fas fa-edit"></i> Edit</div>
-            <div class="ui floating pointing dropdown icon button small">
-                <i class="dropdown icon"></i>
-                <div class="menu">
-                <div class="item"><i class="fas fa-unlock"></i> Edit Post</div>
-                <div class="item"><i class="fas fa-link"></i> Remove Post</div>
-                <div class="item"><i class="fas fa-edit"></i> Hide Post</div>
+        <div class="ui buttons small">
+            <div class="ui button small">
+                <a href="{{ path('bolt_edit_record', {'id': record.id}) }}">
+                    <i class="fas fa-edit"></i> Edit
+                </a>
+            </div>
+                <div class="ui floating pointing dropdown icon button small">
+                    <i class="dropdown icon"></i>
+                    <div class="menu">
+                    <div class="item"><i class="fas fa-link"></i> Remove Post</div>
+                    <div class="item"><i class="fas fa-edit"></i> Hide Post</div>
+                </div>
             </div>
         </div>
-    </div>
 
 
     </td>
