--- a/templates/_partials/_content_record_default.twig
+++ b/templates/_partials/_content_record_default.twig
@@ -25,7 +25,7 @@
         {#</a>#}
     </td>
     <td class="listing-thumb">
-        <img src="{{ record.image|thumbnail(100, 75) }}" width="100" height="72">
+        <img src="{{ record.image|thumbnail(100, 75) }}">
     </td>
     <td class="listing-actions">
 
