--- a/templates/editcontent/media_edit.twig
+++ b/templates/editcontent/media_edit.twig
@@ -10,8 +10,61 @@
 
     <div class="imageholder">
         {% set thumbnail = thumbnail(image = media.filename, width = 900, height = 500, area = media.area, path = media.path) %}
-        <img src="{{ thumbnail }}">
+        <img id="main_image" src="{{ thumbnail }}">
     </div>
+
+    <div class="field" style="margin: 0.5rem 0;">
+        <button class="ui button tiny color-Vibrant" style="text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3); color: #FFF;">
+            Vibrant <small>(<span></span>)</small>
+        </button>
+        &nbsp;
+        <button class="ui button tiny color-Muted" style="text-shadow: 1px 1px 5px rgba(255, 255, 255, 0.5);">
+            Muted <small>(<span></span>)</small>
+        </button>
+        &nbsp;
+        <button class="ui button tiny color-DarkVibrant" style="text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3); color: #FFF;">
+            DarkVibrant <small>(<span></span>)</small>
+        </button>
+        &nbsp;
+        <button class="ui button tiny color-DarkMuted" style="text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3); color: #FFF;">
+            DarkMuted <small>(<span></span>)</small>
+        </button>
+        &nbsp;
+        <button class="ui button tiny color-LightVibrant" style="text-shadow: 1px 1px 5px rgba(255, 255, 255, 0.5);">
+            LightVibrant <small>(<span></span>)</small>
+        </button>
+    </div>
+
+    <script>
+        console.log('joe');
+        var img = document.createElement('img');
+        img.setAttribute('src', '{{ thumbnail|raw }}');
+
+        img.addEventListener('load', function() {
+            var vibrant = new Vibrant(img);
+            var swatches = vibrant.swatches();
+            console.log(swatches);
+            for (var swatch in swatches) {
+                if (swatches.hasOwnProperty(swatch) && swatches[swatch]) {
+                    console.log(swatch, swatches[swatch].getHex());
+                    $('.button.color-' + swatch).css('background', swatches[swatch].getHex());
+                    $('.button.color-' + swatch).find('span').text(swatches[swatch].getHex());
+                }
+            }
+        });
+        console.log('joe2');
+
+            /*
+             * Results into:
+             * Vibrant #7a4426
+             * Muted #7b9eae
+             * DarkVibrant #348945
+             * DarkMuted #141414
+             * LightVibrant #f3ccb4
+             */
+
+
+    </script>
 
     <br>
 
@@ -120,3 +173,9 @@
 
 
 {% endblock aside %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vibrant.js/1.0.0/Vibrant.min.js"></script>
+
+{% endblock javascripts %}
