--- a/templates/editcontent/fields/html.twig
+++ b/templates/editcontent/fields/html.twig
@@ -1,4 +1,4 @@
-{% extends 'editcontent/fields/_base.twig' %}
+{% extends '@bolt/editcontent/fields/_base.twig' %}
 
 {% block field %}
     <label>{{ field.definition.label|default(field.name) }}</label>
