--- a/templates/security/login.twig
+++ b/templates/security/login.twig
@@ -1,4 +1,4 @@
-{% extends '_base/layout_blank.twig' %}
+{% extends '@bolt/_base/layout_blank.twig' %}
 
 {% block title %}
     {{ 'title.login'|trans }}
