--- a/templates/users/edit.twig
+++ b/templates/users/edit.twig
@@ -1,4 +1,4 @@
-{% extends '_base/layout.twig' %}
+{% extends '@bolt/_base/layout.twig' %}
 
 {% block title %}
  {{ 'title.edit_user'|trans }} » <strong>{{ user.fullName|default('Unknown') }}</strong>
