--- a/templates/bundles/TwigBundle/Exception/error403.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error403.html.twig
@@ -7,8 +7,7 @@
     your application from some errors.
     See https://symfony.com/doc/current/cookbook/controller/error_pages.html
 #}
-
-{% extends '_base/layout.twig' %}
+{% extends '@bolt/_base/layout.twig' %}
 
 {% block body_id 'error' %}
 
