--- a/templates/editcontent/fields/text.twig
+++ b/templates/editcontent/fields/text.twig
@@ -1,4 +1,4 @@
-{% extends 'editcontent/fields/_base.twig' %}
+{% extends '@bolt/editcontent/fields/_base.twig' %}
 
 {% block field %}
     <label>{{ label }}</label>
