--- a/templates/editcontent/fields/html.twig
+++ b/templates/editcontent/fields/html.twig
@@ -3,6 +3,6 @@
 {% block field %}
     <label>{{ field.definition.label|default(field.name) }}</label>
     <textarea name="{{ name }}" class="{{ class }}">
-{{ field }}
+{{ value }}
     </textarea>
 {% endblock %}
