--- a/templates/editcontent/fields/_base.twig
+++ b/templates/editcontent/fields/_base.twig
@@ -1,5 +1,5 @@
 {% if not label|default() %}
-    {% set label = field.definition.label|default(field.name) %}
+    {% set label = field.definition.label %}
 {% endif %}
 
 {% if not name|default() %}
@@ -7,7 +7,7 @@
 {% endif %}
 
 {% if not value|default() %}
-    {% set value = field|default() %}
+    {% set value = field.value|join|default() %}
 {% endif %}
 
 {% if not class|default() %}
