--- a/templates/editcontent/fields/html.twig
+++ b/templates/editcontent/fields/html.twig
@@ -1,8 +1,6 @@
 {% extends '@bolt/editcontent/fields/_base.twig' %}
 
 {% block field %}
-    <label>{{ field.definition.label|default(field.name) }}</label>
-    <textarea name="{{ name }}" class="{{ class }}">
-{{ value }}
-    </textarea>
+    <label>{{ label }}</label>
+    <textarea name="{{ name }}" class="{{ class }}">{{ value }}</textarea>
 {% endblock %}
